
* Creating nodes in background wasn't handling createParentsIfNeeded.

* Issue 216: Rewrote LeaderLatch to better handle connection/server instability. At the same time, made
most of the calls async which will help concurrency and performance.

* Issue 217: DistributedAtomicLong (et al) should use ensurePath internally to be consistent with
other recipes.

* Issue 221: client.getACL().forPath("/") throws a NullPointerException, because the Zookeeper
API expects a Stat, but GetACLBuilderImpl initializes responseStat to null.

* Issue 222: Counter and log messages reversed in RetryLoop.takeException().

1.2.5 - November 27, 2012
=========================
* Depend on ZooKeeper 3.4.5

* Issue 177: PathChildrenCache wasn't shutting down the executor when closed. Also, reworked the event
queue to avoid potential herding of messages in unstable conditions. The herding could result in runaway
memory allocation as reported in the issue. NOTE: due to this change, the PathChildrenCache node
refresh code and the PathChildrenCacheListener notification threads have been merged. Do not block
for very long inside of your PathChildrenCacheListener or you will prevent the cache from getting
updated.

* Issue 200: Post-creation services registered in ServiceDiscovery via registerService() were
not being treated the same as the service passed in the constructor. Consequently they wouldn't get
re-registered if there were connection problems.

* Creating nodes withProtection() is now supported in the background. e.g.
client.create().withProtection().inBackground()...

* Added methods to InterProcessSemaphoreV2: setNodeData() and getParticipantNodes() and, to the Lease
interface, getData().

* Issue 205 - already started error message was misleading.

* Pull 209 - Fixed inconsistent API for get() in DiscoveryResource.java - thanks to user dougnukem

* Issue 211 - Added getState() method to CuratorFramework.
