@@ -13,6 +13,10 @@ most of the calls async which will help concurrency and performance.
 * Issue 217: DistributedAtomicLong (et al) should use ensurePath internally to be consistent with
 other recipes.
 
+* Issue 220: When creating a ServiceCacheImpl, a PathChildrenCache is created. The cache loads all existing services,
+but because preloading does not create events, ServiceCacheImpl never notices this. ServiceCacheImpl.getInstances()
+will return an empty list.
+
 * Issue 221: client.getACL().forPath("/") throws a NullPointerException, because the Zookeeper
 API expects a Stat, but GetACLBuilderImpl initializes responseStat to null.
 
